--- a/env.example
+++ b/env.example
@@ -2,6 +2,8 @@ secret_key=70hw&&3en4emtk-miqi6&koswmkcrnyxjd)j*qhl^9)@u9jn^$
 debug=False
 allowed_hosts=localhost
 
+config_path=/path/to/config.json
+
 # db configuration
 NAME=
 HOST=
